--- a/package.json
+++ b/package.json
@@ -4,13 +4,22 @@
   "description": "SDK for integrating credential issuer agents with GlobaliD",
   "main": "index.js",
   "scripts": {
+    "format": "prettier --write .",
+    "format:check": "prettier --check .",
     "test": "jest"
   },
   "repository": {
     "type": "git",
     "url": "git+https://gitlab.com/globalid/credentials-issuer/issuer-agent-sdk.git"
   },
-  "keywords": ["credential", "issuer", "identity", "self-sovereign", "SSI", "verifiable"],
+  "keywords": [
+    "credential",
+    "issuer",
+    "identity",
+    "self-sovereign",
+    "SSI",
+    "verifiable"
+  ],
   "author": "GlobaliD",
   "license": "ISC",
   "bugs": {
@@ -21,6 +30,7 @@
     "@types/jest": "^27.0.2",
     "@types/node": "^16.11.6",
     "jest": "^27.3.1",
+    "prettier": "^2.4.1",
     "ts-jest": "^27.0.7",
     "ts-node": "^10.4.0",
     "typescript": "^4.4.4"
