--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "SDK for integrating credential issuer agents with GlobaliD",
   "main": "index.js",
   "scripts": {
+    "build": "npm run clean && npm run compile && npm run test && npm run lint && npm run format:check",
+    "clean": "rimraf dist",
+    "compile": "tsc --project tsconfig.build.json",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "lint": "eslint .",
@@ -38,6 +41,7 @@
     "eslint-plugin-jest": "^25.2.3",
     "jest": "^27.3.1",
     "prettier": "^2.4.1",
+    "rimraf": "^3.0.2",
     "ts-jest": "^27.0.7",
     "ts-node": "^10.4.0",
     "typescript": "^4.4.4"
