--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "SDK for integrating a credential issuer agent with GlobaliD",
   "main": "index.js",
   "scripts": {
-    "build": "npm run clean && npm run compile && npm run test && npm run lint && npm run format:check",
+    "build": "npm run clean && npm run compile && npm run lint && npm run format:check",
     "clean": "rimraf dist",
     "compile": "tsc --project tsconfig.build.json",
     "format": "prettier --write .",
