--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,31 +13,31 @@ include:
 
 cache:
   untracked: false
-  key: "$CI_COMMIT_REF_NAME"
+  key: '$CI_COMMIT_REF_NAME'
   paths:
-  - node_modules/
+    - node_modules/
 
 .before: &before
   - echo "//registry.npmjs.org/:_authToken=${NPM_TOKEN}">.npmrc
   - npm install --quiet
 
 stages:
- - build
- - test
- - scan
- - publish-npm
+  - build
+  - test
+  - scan
+  - publish-npm
 
 test:
   stage: test
   script:
-  - *before
-  - npm run test
+    - *before
+    - npm run test
 
 build:
   stage: build
   script:
-  - *before
-  - npm run build
+    - *before
+    - npm run build
   artifacts:
     when: always
     paths:
