--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
   },
   "dependencies": {
     "axios": "^0.24.0",
-    "dayjs": "^1.10.7"
+    "dayjs": "^1.10.7",
+    "globalid-crypto-library": "^5.0.1"
   }
 }
