--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
   "dependencies": {
     "axios": "^0.24.0",
     "dayjs": "^1.10.7",
+    "form-data": "^4.0.0",
     "globalid-crypto-library": "^5.0.1"
   }
 }
