--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -5,5 +5,5 @@
     "outDir": "dist"
   },
   "include": ["src/**/*.ts"],
-  "exclude": ["**/*.spec.ts", "jest.config.ts"]
+  "exclude": ["**/*.spec.ts", "jest.config.ts", "**/__mocks__"]
 }
