--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "description": "SDK for integrating a credential issuer agent with GlobaliD",
   "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
     "build": "npm run clean && npm run compile && npm run lint && npm run format:check",
     "clean": "rimraf dist",
@@ -36,14 +37,17 @@
   "devDependencies": {
     "@types/jest": "^27.0.2",
     "@types/node": "^16.11.6",
+    "@types/sinon": "^10.0.6",
     "@typescript-eslint/eslint-plugin": "^5.3.0",
     "@typescript-eslint/parser": "^5.3.0",
     "eslint": "^8.1.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-jest": "^25.2.3",
     "jest": "^27.3.1",
+    "nock": "^13.2.1",
     "prettier": "^2.4.1",
     "rimraf": "^3.0.2",
+    "sinon": "^12.0.1",
     "ts-jest": "^27.0.7",
     "ts-node": "^10.4.0",
     "typescript": "^4.4.4"
