--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "build": "npm run clean && npm run compile && npm run lint && npm run format:check",
+    "build": "npm run clean && npm run compile && genversion dist/version.js && npm run lint && npm run format:check",
     "clean": "rimraf dist",
     "compile": "tsc --project tsconfig.build.json",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "lint": "eslint .",
     "lint:fix": "npm run lint -- --fix",
+    "prepublish": "genversion dist/version.js",
     "test": "jest",
     "test:watch": "npm run test -- --watch"
   },
@@ -43,6 +44,7 @@
     "eslint": "^8.1.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-jest": "^25.2.3",
+    "genversion": "^3.0.2",
     "jest": "^27.3.1",
     "nock": "^13.2.1",
     "prettier": "^2.4.1",
