--- a/package.json
+++ b/package.json
@@ -5,14 +5,14 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "build": "npm run clean && npm run compile && genversion dist/version.js && npm run lint && npm run format:check",
+    "build": "npm run clean && npm run genver && npm run compile && npm run lint && npm run format:check",
     "clean": "rimraf dist",
     "compile": "tsc --project tsconfig.build.json",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
+    "genver": "genversion src/version.ts --es6 --semi",
     "lint": "eslint .",
     "lint:fix": "npm run lint -- --fix",
-    "prepublish": "genversion dist/version.js",
     "test": "jest",
     "test:watch": "npm run test -- --watch"
   },
