feat(IDENTPD-526): prepublish script

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "genver": "genversion src/version.ts --es6 --semi",
     "lint": "eslint .",
     "lint:fix": "npm run lint -- --fix",
+    "prepublishOnly": "npm run genver && npm run compile",
     "test": "jest",
     "test:watch": "npm run test -- --watch"
   },
