--- a/package.json
+++ b/package.json
@@ -58,10 +58,12 @@
     "typescript": "^4.4.4"
   },
   "dependencies": {
+    "@types/lodash": "^4.14.182",
     "axios": "^0.24.0",
     "dayjs": "^1.10.7",
     "form-data": "^4.0.0",
     "globalid-crypto-library": "^5.0.1",
-    "joi": "^17.5.0"
+    "joi": "^17.5.0",
+    "lodash": "^4.17.21"
   }
 }
