--- a/package.json
+++ b/package.json
@@ -63,7 +63,6 @@
     "dayjs": "^1.10.7",
     "form-data": "^4.0.0",
     "globalid-crypto-library": "^5.0.1",
-    "joi": "^17.5.0",
-    "lodash": "^4.17.21"
+    "joi": "^17.5.0"
   }
 }
