--- a/.github/workflows/quality-js-sdk.yml
+++ b/.github/workflows/quality-js-sdk.yml
@@ -1,7 +1,7 @@
 name: Default SDK
-on: 
+on:
   push:
-    branches: 
+    branches:
       - '**'
     tags-ignore:
       - '*.*'
@@ -12,7 +12,27 @@ jobs:
     name: Setup and test
     runs-on: ubuntu-latest
     steps:
-      - uses: globalid/github-actions/npm-setup@main
+      - name: Checkout
+        uses: actions/checkout@v3
+      - uses: actions/setup-node@v3.6.0
+        id: npm-setup
         with:
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+          node-version: '18'
+          registry-url: 'https://registry.npmjs.org/'
+      - name: Cache dependencies
+        id: cache
+        uses: actions/cache@v3
+        with:
+          path: |
+            ./node_modules
+            ./exposed_src
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node
+      - name: Install dependencies
+        shell: sh
+        if: steps.cache.outputs.cache-hit != 'true'
+        env:
+          NODE_AUTH_TOKEN: ${{ inputs.NPM_TOKEN }}
+        run: npm ci --ignore-scripts
       - run: npm run test
