--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@globalid/issuer-toolkit",
-  "version": "0.1.0",
+  "version": "0.5.0",
   "description": "Library for credential issuers integrated with GlobaliD",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -20,7 +20,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://gitlab.com/globalid/credentials-issuer/issuer-toolkit.git"
+    "url": "git+https://github.com/globalid/issuer-toolkit.git"
   },
   "keywords": [
     "credential",
@@ -32,36 +32,36 @@
     "verifiable"
   ],
   "author": "GlobaliD",
-  "license": "ISC",
+  "license": "Apache-2.0",
   "bugs": {
-    "url": "https://gitlab.com/globalid/credentials-issuer/issuer-toolkit/issues"
+    "url": "https://github.com/globalid/issuer-toolkit/issues"
   },
-  "homepage": "https://gitlab.com/globalid/credentials-issuer/issuer-toolkit#readme",
+  "homepage": "https://github.com/globalid/issuer-toolkit#readme",
   "devDependencies": {
-    "@golevelup/ts-jest": "0.3.3",
-    "@types/jest": "^27.0.2",
-    "@types/node": "^16.11.6",
-    "@types/sinon": "^10.0.6",
-    "@typescript-eslint/eslint-plugin": "^5.3.0",
-    "@typescript-eslint/parser": "^5.3.0",
-    "eslint": "^8.1.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-jest": "^25.2.3",
-    "genversion": "^3.0.2",
-    "jest": "^27.3.1",
-    "nock": "^13.2.1",
-    "prettier": "^2.4.1",
-    "rimraf": "^3.0.2",
-    "sinon": "^12.0.1",
-    "ts-jest": "^27.0.7",
-    "ts-node": "^10.4.0",
-    "typescript": "^4.4.4"
+    "@golevelup/ts-jest": "0.3.5",
+    "@types/jest": "^29.4.0",
+    "@types/node": "^18.14.1",
+    "@types/sinon": "^10.0.13",
+    "@typescript-eslint/eslint-plugin": "^5.53.0",
+    "@typescript-eslint/parser": "^5.53.0",
+    "eslint": "^8.34.0",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-jest": "^27.2.1",
+    "genversion": "^3.1.1",
+    "jest": "^29.4.3",
+    "nock": "^13.3.0",
+    "prettier": "^2.8.4",
+    "rimraf": "^4.1.2",
+    "sinon": "^15.0.1",
+    "ts-jest": "^29.0.5",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.5"
   },
   "dependencies": {
-    "axios": "^0.24.0",
-    "dayjs": "^1.10.7",
+    "axios": "^1.3.4",
+    "dayjs": "^1.11.7",
     "form-data": "^4.0.0",
-    "globalid-crypto-library": "^5.0.1",
-    "joi": "^17.5.0"
+    "globalid-crypto-library": "^5.0.4",
+    "joi": "^17.8.3"
   }
 }
