feat(DEV-1246): move from legacy identity search API to directory API

--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -4,6 +4,5 @@
     "declaration": true,
     "outDir": "dist"
   },
-  "include": ["src/**/*.ts"],
-  "exclude": ["**/*.spec.ts", "jest.config.ts", "**/__mocks__"]
+  "include": ["src/**/*.ts"]
 }
