--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,5 +6,6 @@
     "skipLibCheck": true,
     "strict": true,
     "target": "ES2022"
-  }
+  },
+  "exclude": ["**/*.spec.ts", "jest.config.ts", "**/__mocks__"]
 }
